avoid flickering on transitions

--- a/css/style.css
+++ b/css/style.css
@@ -2246,7 +2246,10 @@ input:focus {
   overflow: hidden;
   height: 990px;
   border-radius: 10px;
-  background: #fff; }
+  background: #fff;
+  /* avoid flickering on child elements transitions */
+  position: relative;
+  z-index: 1; }
 
 .page-head {
   position: relative;
@@ -2277,7 +2280,8 @@ input:focus {
   float: left;
   width: 147px;
   height: 100%;
-  background-color: #ebecf9; }
+  background-color: #ebecf9;
+  overflow-y: auto; }
 
 .chat {
   float: left;
@@ -2308,7 +2312,9 @@ input:focus {
   font-size: 22px;
   transform: scale(1.2, 1);
   cursor: pointer;
-  transition: all .3s ease; }
+  transition: all .3s ease;
+  z-index: 1;
+  /* avoid flickering on transition */ }
   .back:hover {
     -webkit-filter: brightness(1.1);
     filter: brightness(1.1);
@@ -2324,7 +2330,9 @@ input:focus {
   margin-right: 28px;
   font-size: 18px;
   cursor: pointer;
-  transition: all .3s ease; }
+  transition: all .3s ease;
+  z-index: 1;
+  /* avoid flickering on transition */ }
   .page-head__icon:hover {
     -webkit-filter: brightness(1.1);
     filter: brightness(1.1);
@@ -2359,7 +2367,9 @@ input:focus {
   width: 25px;
   padding: 10px 0;
   cursor: pointer;
-  transition: all .3s ease; }
+  transition: all .3s ease;
+  z-index: 1;
+  /* avoid flickering on transition */ }
   .menu-handler:hover {
     -webkit-filter: brightness(1.1);
     filter: brightness(1.1);
@@ -2415,7 +2425,9 @@ input:focus {
 .chat-add-message__picture,
 .chat-add-message__voice {
   cursor: pointer;
-  transition: all .3s ease; }
+  transition: all .3s ease;
+  z-index: 1;
+  /* avoid flickering on transition */ }
   .chat-add-message__picture:hover,
   .chat-add-message__voice:hover {
     -webkit-filter: brightness(1.1);
@@ -2438,8 +2450,7 @@ input:focus {
   font-size: 16px; }
 
 .contacts-list {
-  margin: 0;
-  overflow-y: auto; }
+  margin: 0; }
 
 .contacts__item {
   box-sizing: border-box;
@@ -2448,7 +2459,9 @@ input:focus {
   text-align: center;
   vertical-align: middle;
   cursor: pointer;
-  transition: all .3s ease; }
+  transition: all .3s ease;
+  z-index: 1;
+  /* avoid flickering on transition */ }
   .contacts__item:hover {
     -webkit-filter: brightness(1.1);
     filter: brightness(1.1);
@@ -2520,7 +2533,9 @@ input:focus {
   font-size: 18px;
   color: #c7cae1;
   cursor: pointer;
-  transition: all .3s ease; }
+  transition: all .3s ease;
+  z-index: 1;
+  /* avoid flickering on transition */ }
   .contact-pane__action:hover {
     -webkit-filter: brightness(1.1);
     filter: brightness(1.1);
@@ -2549,7 +2564,9 @@ input:focus {
   line-height: 32px;
   color: #fff;
   cursor: pointer;
-  transition: all .3s ease; }
+  transition: all .3s ease;
+  z-index: 1;
+  /* avoid flickering on transition */ }
   .contact-pane__blocking-icon:hover {
     -webkit-filter: brightness(1.1);
     filter: brightness(1.1);
