--- a/sass/_contacts.scss
+++ b/sass/_contacts.scss
@@ -1,6 +1,5 @@
 .contacts-list {
     margin: 0;
-    overflow-y: auto;
 }
 
 .contacts__item {
